<?xml version="1.0"?>
<package format="2">
  <name>wandering_turtlebot</name>
  <version>0.1.0</version>
  <description>The wandering-turtlebot package</description>
  <maintainer email="danielmohansahu@gmail.com">Daniel M. Sahu</maintainer>
  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>turtlebot3_gazebo</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
